# ChangeLog for app-crypt/gnupg
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.364 2010/02/03 10:50:30 fauli Exp $

  03 Feb 2010; Christian Faulhammer <fauli@gentoo.org> gnupg-2.0.14.ebuild:
  stable x86, bug 301958

  01 Feb 2010; Markos Chandras <hwoarang@gentoo.org> gnupg-2.0.14.ebuild:
  Stable on amd64 wrt bug #301958

  26 Jan 2010; Jeroen Roovers <jer@gentoo.org> gnupg-2.0.14.ebuild:
  Stable for HPPA (bug #301958).

  24 Jan 2010; Brent Baude <ranger@gentoo.org> gnupg-2.0.14.ebuild:
  stable ppc64, bug 301958

  24 Jan 2010; Brent Baude <ranger@gentoo.org> gnupg-2.0.14.ebuild:
  stable ppc, bug 301958

*gnupg-2.0.14 (22 Dec 2009)

  22 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +gnupg-2.0.14.ebuild:
  Version bump.

  28 Oct 2009; Raúl Porcel <armin76@gentoo.org> gnupg-1.4.10.ebuild:
  ia64/s390/sh/sparc stable wrt #287436

  21 Oct 2009; Markus Meier <maekke@gentoo.org> gnupg-1.4.10.ebuild:
  arm stable, bug #287436

  18 Oct 2009; nixnut <nixnut@gentoo.org> gnupg-1.4.10.ebuild:
  ppc stable #287436

  12 Oct 2009; Robin H. Johnson <robbat2@gentoo.org> gnupg-2.0.12.ebuild,
  gnupg-2.0.13.ebuild:
  Add warning to restart your agent per request from Anarchy. Using a new
  gpg binary with an old agent will lead to failures complaining about
  GETINFO being an unsupported command.

  11 Oct 2009; Tobias Klausmann <klausman@gentoo.org> gnupg-1.4.10.ebuild:
  Stable on alpha, bug #287436

  05 Oct 2009; Markus Meier <maekke@gentoo.org> gnupg-1.4.10.ebuild:
  amd64/x86 stable, bug #287436

  05 Oct 2009; Jeroen Roovers <jer@gentoo.org> gnupg-1.4.10.ebuild:
  Stable for HPPA (bug #287436).

  03 Oct 2009; Brent Baude <ranger@gentoo.org> gnupg-1.4.10.ebuild:
  Marking gnupg-1.4.10 ppc64 for bug 287436

*gnupg-2.0.13 (04 Sep 2009)

  04 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +gnupg-2.0.13.ebuild:
  Version bump.
