@@ -4,11 +4,13 @@ DIST gnupg-2.0.11.tar.bz2 3852869 RMD160 f532a2c41a4fdcf9bd5130f8d382348f6774ba1
 DIST gnupg-2.0.12.tar.bz2 3924196 RMD160 17edbd6bac5210933ef0cc2ce70820d38ce970ef SHA1 91856f917c13a1a12622ef39995eaf59c46f7502 SHA256 9633e104c519fade1c9fce5843d1f70439b156bcc446aa270ea8192d461d9cce
 DIST gnupg-2.0.13.tar.bz2 3946616 RMD160 a2291f4d5923b50bca980b726e2fe0c31c2589a9 SHA1 2ff42aff14cdddafc291d44ac1968af5f09a9d4d SHA256 d9b3d71f8f2930483d7b7b56276ebe954175b72b34128c6669d0fc00d289aa2e
 DIST gnupg-2.0.14.tar.bz2 3982080 RMD160 3e5ecf0108b65f7d2ecfd6f61b81e04e526ba52f SHA1 cc5e4637f37f5bc82b00c73fc094ddadb7401821 SHA256 feb6050dc00e59d426485550a2af8d416cf975e5e1e0ecf1c5f1bd139baafca5
+DIST gnupg-2.0.15.tar.bz2 3976879 RMD160 16fe31125f2a7e18ffc5618902e2d3370b220e65 SHA1 3596668fb9cc8ec0714463a5009f990fc23434b0 SHA256 5881882f4da120ce1c71da64468392704b391ca7652ddc512bc4f1d8968f0d1c
 DIST idea.c.gz 5216 RMD160 e35be5a031d10d52341ac5f029d28f811edd908d SHA1 82fded4ec31b97b3b2dd22741880b67cfee40f84 SHA256 309928da34941dff1d6f6687542ff3d58306d85be9e1a9906bc4f9f8e6011844
 EBUILD gnupg-1.4.10.ebuild 5368 RMD160 e9436e84e3a14c846eb882771b5d40ee701a3bfa SHA1 a24c55b9918334a1d92acc44102d16b848042755 SHA256 f35e985539ea95e62b81a3a67dccbd268b463bc873acbef8764ea2ca974a7332
 EBUILD gnupg-2.0.11.ebuild 3055 RMD160 0e573965246828e544cc39451eb457766dccca67 SHA1 7879fb22857d315561428ee8c5181f79ff7ea3e4 SHA256 ca1cd945725af5c1580df0048261179599ff93020718ef0e51394e48506d0364
 EBUILD gnupg-2.0.12.ebuild 3516 RMD160 b8af6b8b1591c055f82ce871986f719604790ad3 SHA1 e74420c9cd255e7320fa2ac79e213acfc35f3616 SHA256 194ea6856841ed3c0dcbf01cc3a0a4a4d30e0e69b890980f62ec1cb28d781a44
 EBUILD gnupg-2.0.13.ebuild 3489 RMD160 3ec258fbb8ff3b3ae737e19b70665ccd121ca5c3 SHA1 b89f1dcc7d3f67f1e762460ad4fc7ea239dc260d SHA256 330afc1616313c2bb05c77e9902886906a1db776caa9f773eea4e00e1be849c3
-EBUILD gnupg-2.0.14.ebuild 3482 RMD160 94d51a70c2ccd7b847344a21638195eab3a6d939 SHA1 2b712ab82a9e6422d4826412f9f43daa453571e0 SHA256 b0d9cece86faeb2077ac89c9315b8b5432328d1f051e82b9973f7bb5429c112e
-MISC ChangeLog 55586 RMD160 5e6d04b71af4f83d16c0587af739228a2794c37d SHA1 a04ded6812a30a0ec11a3e3d18e6160b89fe6e59 SHA256 7ff8be874adf94abfba9f83ffd0d658e486bd8a84306d89d39ab55871e55b336
+EBUILD gnupg-2.0.14.ebuild 3484 RMD160 4e6da379a3a78d46d0ff63384a0e153194946b5f SHA1 231c47630263d5ffe70be21b04dac73e76b54447 SHA256 9adebbb145a605f2444eb7272c2dd04fc5a593a86fb68db054e0d69dddb5db3a
+EBUILD gnupg-2.0.15.ebuild 3485 RMD160 ce340198a0b79abe257e5d87bd33d7798d364740 SHA1 50076d7876d5c4a1038b72ea54654a3bb934f3a9 SHA256 a4edf9af4d06560c8556fc72b348a39213d36639a5b6a86273435cc43ed82ff2
+MISC ChangeLog 55853 RMD160 4f1afeb8f9bbaaf80aebf83aa3475c30b8e22550 SHA1 86b6f0bc0db4f08dc72e938eb42c1de0c33f280c SHA256 81d2fbb7cb55b6134d9d271b514f1771881e5dc2e4563e692e6e9e8f5ec9da9b
 MISC metadata.xml 698 RMD160 8c3577ffbf64da24c47d181ef24f8f7e9e09a224 SHA1 92579ce4870e7bbee4bf596bb466b3f9ce587157 SHA256 8f18f677d1d437d3033b367e8a7514b745a762d518af7a3afdc44e1ddbf2b31e
